# context-window-optimizer

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: knapsack.rs  pipeline.rs  realistic.rs  scoring.rs  simhash.rs
docs/: architecture.md
docs/superpowers/plans/: 2026-03-28-v1.0-feedback-loop-weight-learning-file-watcher.md  2026-04-03-realistic-test-data.md  2026-04-05-p3-two-phase-scoring.md  2026-04-05-p3b-content-caching.md
docs/superpowers/specs/: 2026-04-03-realistic-test-data-design.md  2026-04-04-discovery-perf-analysis.md
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/feedback/: learning.rs  mod.rs  store.rs  utilization.rs
src/index/: cache.rs  dedup.rs  depgraph.rs  discovery.rs  mod.rs  simhash.rs  tokenizer.rs
src/index/ast/: go.rs  mod.rs  python.rs  queries.rs  rust.rs  typescript.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/output/: format.rs  mod.rs
src/scoring/: mod.rs  signals.rs
src/selection/: diversity.rs  knapsack.rs  mod.rs
src/watch/: mod.rs
tests/fixtures/: builder.rs  content.rs  mod.rs  scenarios.rs
tests/integration/: cli.rs  edge_cases.rs  efficiency.rs  feedback.rs  main.rs  mcp_efficiency.rs  mod.rs  pack_pipeline.rs  realistic.rs  watch.rs
