[package]
name = "ctx-optim"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Context Window Optimizer — intelligent context selection for LLM agents"
license = "MIT"

[dependencies]
# ── Async Runtime ──
tokio = { version = "1", features = ["full"] }

# ── MCP Server (delivery layer) ──
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1.0"              # JSON Schema for MCP tool params

# ── CLI ──
clap = { version = "4", features = ["derive", "env"] }

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"                  # Config file parsing

# ── Token Counting ──
bpe-openai = "0.3"            # Fast BPE tokenizer — cl100k_base, zero-alloc count(), linear worst-case

# ── AST / Code Analysis (Phase 2) ──
tree-sitter = { version = "0.26", optional = true }
tree-sitter-language = { version = "0.1", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }

# ── File Discovery & Git ──
ignore = "0.4"                # .gitignore-aware recursive walk (used by ripgrep)
git2 = "0.19"                 # libgit2 — recency, blame, change detection

# ── Hashing / Dedup ──
md-5 = "0.10"                 # Exact-match dedup
siphasher = "1"               # SimHash near-duplicate detection

# ── Error Handling ──
thiserror = "2"               # Library error types
anyhow = "1"                  # Application-level errors

# ── Observability ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Config ──
dotenvy = "0.15"

# ── Concurrency ──
dashmap = "6"                 # Lock-free concurrent hashmap for index cache
rayon = "1.10"                # Parallel file scoring

# ── Persistence (optional, for feedback loop) ──
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# ── File Watching (incremental re-index) ──
notify = { version = "7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
insta = { version = "1", features = ["yaml"] }
mockall = "0.13"
tempfile = "3"
assert_cmd = "2"              # CLI integration tests
predicates = "3"              # CLI output assertions
tokio-test = "0.4"
rand = "0.8"

[features]
default = ["mcp", "ast"]
mcp = []
ast = [
    "dep:tree-sitter",
    "dep:tree-sitter-language",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-python",
    "dep:tree-sitter-go",
]
watch = ["dep:notify"]
feedback = ["dep:rusqlite"]
full = ["mcp", "ast", "watch", "feedback"]

[[bin]]
name = "ctx-optim"
path = "src/main.rs"

[[bench]]
name = "scoring"
harness = false

[[bench]]
name = "knapsack"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "simhash"
harness = false

[[bench]]
name = "realistic"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Faster dev builds — link with lld if available
# See .cargo/config.toml